# src/main/openapi/openapi-bff.yaml
@@ -14,7 +14,38 @@ tags:
   - name: skill
   - name: agentGroup
   - name: externalAgent
+  - name: dispatch
 paths:
+  /dispatch/chat:
+    post:
+      x-onecx:
+        permissions:
+          dispatch:
+            - read
+      tags:
+        - dispatch
+      summary: Chat with AI
+      operationId: chat
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChatRequest'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChatMessage'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+
   /agents:
     post:
       x-onecx:
@@ -1067,6 +1098,54 @@ components:
             - APP_ID
         value:
           type: string
+    ChatRequest:
+      type: object
+      required:
+        - chatMessage
+      properties:
+        requestContext:
+          $ref: '#/components/schemas/RequestContext'
+        chatMessage:
+          $ref: '#/components/schemas/ChatMessage'
+        conversation:
+          $ref: '#/components/schemas/Conversation'
+    RequestContext:
+      type: object
+      properties:
+        filter:
+          $ref: '#/components/schemas/AgentFilter'
+        agentId:
+          type: string
+        aiContext:
+          type: array
+          items:
+            type: string
+    ChatMessage:
+      type: object
+      properties:
+        conversationId:
+          type: string
+        message:
+          type: string
+          maxLength: 10000
+        type:
+          type: string
+          enum: [ ASSISTANT, SYSTEM, USER, ACTION ]
+        creationDate:
+          type: integer
+          format: int64
+    Conversation:
+      type: object
+      properties:
+        conversationId:
+          type: string
+        history:
+          type: array
+          items:
+            $ref: '#/components/schemas/ChatMessage'
+        conversationType:
+          type: string
+          enum: [ Q_AND_A ]
     AgentAbstract:
       type: object
       properties:
